Fix small misalignment

--- a/frontend/src/components/item/Item.css
+++ b/frontend/src/components/item/Item.css
@@ -31,6 +31,7 @@
 
 .product-item-prices {
   display: flex;
+  align-items: baseline;
   gap: var(--spacing-5);
   font-size: var(--font-size-base);
   flex-wrap: wrap;
